navbar toggler icon set

--- a/Frontend/styles/index.css
+++ b/Frontend/styles/index.css
@@ -1,19 +1,23 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
 
-body {
+body{
   font-family: 'Open Sans', sans-serif;
   background-color: #E0F7FA;
 }
 
 .navbar {
- border: 2px groove white;
-
-  background-color: #1A237E;
+  background-color: #3949AB;
   display: flex;
+ 
   align-items: center;
   padding: 10px;
   border-radius: 5px;
+}
+.navbar-brand{
+  color: white;
+  font-size: 30px;
 }
 
 .navbar-brand img {
@@ -21,11 +25,6 @@ body {
   margin-left: 30px;
   height: 60px;
   border-radius: 5px;
-}
-
-#showname {
-  color: white;
-
 }
 
 .navbar-menu {
@@ -40,10 +39,10 @@ body {
   margin: 0 10px;
 }
 
-.navbar-menu li a {
+.navbar-nav li a {
   color: #fff;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 20px;
   transition: background-color 0.3s ease;
 }
 
@@ -70,7 +69,7 @@ body {
   margin-right: 20px;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #E1F5FE;
+  background-color: #90CAF9;
   color: black;
   border: none;
   padding: 10px 20px;
@@ -80,10 +79,19 @@ body {
 }
 
 .navbar-buttons button:hover {
-  background-color: #1e8cbe;
+  background-color: #E8EAF6;
   font-size: 20px;
-  color: brown;
+  color:brown;
   font-weight: bolder;
+}
+#showname{
+  margin-top: 9px;
+  margin-left: 8px;
+  margin-right: 8px;
+  color: white;
+}
+#toggerId{
+  color: white;
 }
 
 /* CSS for medium screens */
@@ -151,7 +159,7 @@ body {
   margin: 0 auto;
   padding: 20px;
   /* margin-top: 30px; */
-  background-color: #E1F5FE;
+   background-color: #C5CAE9;
 
   border: 1px solid #CCCCCC;
   border-radius: 10px;
@@ -163,25 +171,20 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-
-.content div:nth-child(1) {
+.content div:nth-child(1){
   width: 40%;
 }
-
 .image {
   /* border: 1px solid black; */
-  width: 100%;
-  /* Set the width of the container */
-  height: 600px;
-  /* Set the desired height of the container */
-  overflow: hidden;
-  /* Hide any overflowing content */
+  width: 100%; /* Set the width of the container */
+  height: 500px; /* Set the desired height of the container */
+  overflow: hidden; /* Hide any overflowing content */
 }
 
 .image img {
   width: 100%;
   height: 100%;
-
+  object-fit: cover;
 }
 
 
@@ -250,12 +253,10 @@ body {
     font-size: 16px;
     margin-bottom: 10px;
   }
-
   .image img {
     /* max-width: 600px; */
     width: 100%;
   }
-
   .text p {
     font-size: 14px;
     margin-bottom: 10px;
@@ -265,9 +266,8 @@ body {
     font-size: 14px;
   }
 }
-
 .slideshow {
-
+  margin-top: 20px;
   border-radius: 10px;
   overflow: hidden;
   /* height: 400px; */
@@ -276,9 +276,8 @@ body {
 
 .slideshow img {
   width: 100%;
-  height: 600px;
+  height: 500px;
   object-fit: cover;
-
 }
 
 #main-2 {
@@ -286,7 +285,7 @@ body {
   display: flex;
   margin: auto;
   margin-top: 20px;
-
+  
   justify-content: space-between;
 }
 
@@ -296,7 +295,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 20px;
   text-align: center;
-  background-color: #E1F5FE;
+  background-color: #C5CAE9;
   border-radius: 5px;
   /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease; */
@@ -342,10 +341,9 @@ body {
     flex-basis: 100%;
   }
 }
-
 #main-3 {
   /* border: 1px solid black; */
-  background-color: #E1F5FE;
+  background-color: #C5CAE9;
   width: 100%;
   display: flex;
   margin: auto;
@@ -357,7 +355,7 @@ body {
 .left-div {
   flex-basis: 50%;
   padding: 20px;
-  background-color: #E1F5FE;
+  background-color: #C5CAE9;
 }
 
 .right-div {
@@ -391,19 +389,16 @@ body {
   border-radius: 5px;
   cursor: pointer;
 }
-
-.buttons button:hover {
-  font-weight: bolder;
-  cursor: pointer;
+.buttons button:hover{
+ font-weight: bolder;
+ cursor: pointer;
   font-size: 20px;
   color: white;
   background-color: #42A5F5;
 }
-
-.right-div {
+.right-div{
   width: 50%;
 }
-
 .right-div {
   display: flex;
   justify-content: center;
@@ -428,8 +423,7 @@ body {
     flex-wrap: wrap;
   }
 
-  .left-div,
-  .right-div {
+  .left-div, .right-div {
     flex-basis: 100%;
   }
 }
@@ -452,7 +446,6 @@ body {
     margin-bottom: 10px;
   }
 }
-
 #footer {
   display: flex;
   justify-content: space-around;
@@ -511,7 +504,7 @@ body {
 }
 
 #first {
-
+  
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -553,7 +546,7 @@ body {
     margin-left: 0;
     width: 100%;
   }
-
+  
   #second h1 {
     margin-top: 10px;
   }
@@ -569,3 +562,7 @@ body {
     margin-bottom: 10px;
   }
 }
+
+
+
+
